--- a/Condition Monitoring of Hydraulic System/RandomForest.ipynb
+++ b/Condition Monitoring of Hydraulic System/RandomForest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3ac0fb00",
+   "id": "5a68dcce",
    "metadata": {},
    "source": [
     "# Importing Modules"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fb3f8630",
+   "id": "50f1b4bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62e8a537",
+   "id": "4407fe5f",
    "metadata": {},
    "source": [
     "# Loading Dataset"
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "069c5b4b",
+   "id": "ffae7381",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7e8e994e",
+   "id": "6944dd36",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c2d7b7f5",
+   "id": "d9624bb9",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fee5f379",
+   "id": "62d57618",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb9187fe",
+   "id": "1389d1b8",
    "metadata": {},
    "source": [
     "# Assigning values to X and y"
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4a1e3c4a",
+   "id": "6faa87be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "855be030",
+   "id": "5fd838fd",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ea8b042b",
+   "id": "6b0f2702",
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe00ec2",
+   "id": "f7fe0f97",
    "metadata": {},
    "source": [
     "# Splitting dataset to train and test"
@@ -1287,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ea6a173b",
+   "id": "6d0384c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "36c2b580",
+   "id": "d83a1d4c",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "d25fcba3",
+   "id": "1ac147ec",
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d2e6aaf7",
+   "id": "d1a00718",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a1d43e1f",
+   "id": "25549314",
    "metadata": {},
    "outputs": [
     {
@@ -2278,7 +2278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f42b9f1",
+   "id": "c4a1a55c",
    "metadata": {},
    "source": [
     "# Initialize separate classifiers for each target variable"
@@ -2287,7 +2287,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9e5b3328",
+   "id": "d06940c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2299,14 +2299,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5bfb8b3b",
+   "metadata": {},
+   "source": [
+    "# Fit each classifier on the corresponding target variable"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cb08659c",
+   "execution_count": 29,
+   "id": "4aeda3ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "RandomForestClassifier()"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb_cooler.fit(X_train, y_train['y_coolerCondition'])\n",
+    "nb_valve.fit(X_train, y_train['y_valveCondition'])\n",
+    "nb_pump.fit(X_train, y_train['y_pumpLeak'])\n",
+    "nb_hydraulic.fit(X_train, y_train['y_hydraulicAcc'])\n",
+    "nb_stable.fit(X_train, y_train['y_stableFlag'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9033dd0",
+   "metadata": {},
+   "source": [
+    "# Make predictions on the test data for each classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f01ff710",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fit each classifier on the corresponding target variable"
+    "y_pred_cooler = nb_cooler.predict(X_test)\n",
+    "y_pred_valve = nb_valve.predict(X_test)\n",
+    "y_pred_pump = nb_pump.predict(X_test)\n",
+    "y_pred_hydraulic = nb_hydraulic.predict(X_test)\n",
+    "y_pred_stable = nb_stable.predict(X_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6abe499c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
