--- a/Condition Monitoring of Hydraulic System/RandomForest.ipynb
+++ b/Condition Monitoring of Hydraulic System/RandomForest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a68dcce",
+   "id": "579888f4",
    "metadata": {},
    "source": [
     "# Importing Modules"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "50f1b4bf",
+   "execution_count": 33,
+   "id": "84889d40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4407fe5f",
+   "id": "990c9d74",
    "metadata": {},
    "source": [
     "# Loading Dataset"
@@ -35,8 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "ffae7381",
+   "execution_count": 34,
+   "id": "b1d7b3e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "6944dd36",
+   "execution_count": 35,
+   "id": "5a6c5abd",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "[2205 rows x 23 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,8 +430,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "d9624bb9",
+   "execution_count": 36,
+   "id": "99a85a60",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,8 +455,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "62d57618",
+   "execution_count": 37,
+   "id": "1bfe09d6",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        "[8 rows x 23 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1389d1b8",
+   "id": "a1034d72",
    "metadata": {},
    "source": [
     "# Assigning values to X and y"
@@ -774,8 +774,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "6faa87be",
+   "execution_count": 38,
+   "id": "fb294b9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,8 +787,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "5fd838fd",
+   "execution_count": 39,
+   "id": "e119407c",
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
        "[2205 rows x 17 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,8 +1111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "6b0f2702",
+   "execution_count": 40,
+   "id": "4b74b324",
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1267,7 @@
        "[2205 rows x 5 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7fe0f97",
+   "id": "502769f6",
    "metadata": {},
    "source": [
     "# Splitting dataset to train and test"
@@ -1286,8 +1286,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "6d0384c1",
+   "execution_count": 41,
+   "id": "5675454b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,8 +1296,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "d83a1d4c",
+   "execution_count": 42,
+   "id": "f38d497f",
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1609,7 @@
        "[1764 rows x 17 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1620,8 +1620,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "1ac147ec",
+   "execution_count": 43,
+   "id": "42da333d",
    "metadata": {},
    "outputs": [
     {
@@ -1776,7 +1776,7 @@
        "[1764 rows x 5 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1787,8 +1787,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "d1a00718",
+   "execution_count": 44,
+   "id": "472ba6f5",
    "metadata": {},
    "outputs": [
     {
@@ -2100,7 +2100,7 @@
        "[441 rows x 17 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2111,8 +2111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "25549314",
+   "execution_count": 45,
+   "id": "91a9b459",
    "metadata": {},
    "outputs": [
     {
@@ -2267,7 +2267,7 @@
        "[441 rows x 5 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2278,7 +2278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4a1a55c",
+   "id": "46d671ed",
    "metadata": {},
    "source": [
     "# Initialize separate classifiers for each target variable"
@@ -2286,8 +2286,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "d06940c0",
+   "execution_count": 46,
+   "id": "5a335ae6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2300,7 +2300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bfb8b3b",
+   "id": "eaca3cce",
    "metadata": {},
    "source": [
     "# Fit each classifier on the corresponding target variable"
@@ -2308,24 +2308,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "4aeda3ef",
+   "execution_count": null,
+   "id": "1ee56673",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier()</pre></div></div></div></div></div>"
-      ],
-      "text/plain": [
-       "RandomForestClassifier()"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nb_cooler.fit(X_train, y_train['y_coolerCondition'])\n",
     "nb_valve.fit(X_train, y_train['y_valveCondition'])\n",
@@ -2336,7 +2322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9033dd0",
+   "id": "4c9504e4",
    "metadata": {},
    "source": [
     "# Make predictions on the test data for each classifier"
@@ -2344,8 +2330,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "f01ff710",
+   "execution_count": null,
+   "id": "5c3a6957",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2357,9 +2343,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "29517cce",
+   "metadata": {},
+   "source": [
+    "# Evaluate the performance for each classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6abe499c",
+   "id": "a8e60cb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_cooler = metrics.accuracy_score(y_test['y_coolerCondition'], y_pred_cooler)\n",
+    "accuracy_valve = metrics.accuracy_score(y_test['y_valveCondition'], y_pred_valve)\n",
+    "accuracy_pump = metrics.accuracy_score(y_test['y_pumpLeak'], y_pred_pump)\n",
+    "accuracy_hydraulic = metrics.accuracy_score(y_test['y_hydraulicAcc'], y_pred_hydraulic)\n",
+    "accuracy_stable = metrics.accuracy_score(y_test['y_stableFlag'], y_pred_stable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a36f8ef1",
+   "metadata": {},
+   "source": [
+    "# Print results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b0c532d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Accuracy - Cooler Condition:\",accuracy_cooler)\n",
+    "print(\"Accuracy - Valve Condition:\",accuracy_valve)\n",
+    "print(\"Accuracy - Pump Leak:\",accuracy_pump)\n",
+    "print(\"Accuracy - Hydraulic Acc:\",accuracy_hydraulic)\n",
+    "print(\"Accuracy - Stable Flag:\",accuracy_stable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "994b7e36",
    "metadata": {},
    "outputs": [],
    "source": []
